--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.12.13",
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
+        "cross-env": "^7.0.3",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -21,6 +23,10 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
+        "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "node": "^15.10.0"
     }
 }
